@@ -1,3 +1,8 @@
+2014-01-14  Ilya Tocar  <ilya.tocar@intel.com>
+
+	PR target/64387
+	* gcc.target/i386/pr64387.c: New test.
+
 2015-01-14  Christophe Lyon  <christophe.lyon@linaro.org>
 
 	* gcc.target/aarch64/store-pair-1.c: Fix typo.
